receive reliability improved

--- a/Progress/Thesis.tex
+++ b/Progress/Thesis.tex
@@ -1,5 +1,5 @@
 %% ----------------------------------------------------------------
-%% Thesis.tex -- MAIN FILE (the one that you compile with LaTeX)
+%% Thesis.tex -- MAIN FILE (the one that you compile with LaTeX) PROGRESS
 %% ---------------------------------------------------------------- 
 
 % Set up the document
