background mostly done

--- a/Report/Bibliography.bib
+++ b/Report/Bibliography.bib
@@ -157,3 +157,124 @@ title = {Implementing a Novel Approach an Convert Audio Compression to Text Codi
     year = {2017},
     note = {Available: \url{https://help.irisvr.com/hc/en-us/articles/215884547-The-Importance-of-Frame-Rates}. [Accessed: \today]}
 }
+@inproceedings{Borg2013UsingAG,
+  title={Using a Graphics Turing Test to Evaluate the Effect of Frame Rate and Motion Blur on Telepresence of Animated Objects},
+  author={Martin Borg and S. S. Johansen and K. S. Krog and D. L. Thomsen and Martin Kraus},
+  booktitle={GRAPP/IVAPP},
+  year={2013}
+}
+@misc{DORA, 
+    title={Oculus rift-based system brings true immersion to telepresence robots}, 
+    author = {E. Ackerman},
+    year = {2015},
+    note = {Available: \url{http://spectrum.ieee.org/automaton/robotics/robotics-hardware/upenn-dor a-platform}. [Accessed: \today]}
+}
+@inproceedings{McGlynn,
+ author = {McGlynn, Sean A. and Rogers, Wendy A.},
+ title = {Considerations for Presence in Teleoperation},
+ booktitle = {Proceedings of the Companion of the 2017 ACM/IEEE International Conference on Human-Robot Interaction},
+ series = {HRI '17},
+ year = {2017},
+ isbn = {978-1-4503-4885-0},
+ location = {Vienna, Austria},
+ pages = {203--204},
+ numpages = {2},
+ url = {http://doi.acm.org/10.1145/3029798.3038369},
+ doi = {10.1145/3029798.3038369},
+ acmid = {3038369},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {immersion, presence, teleoperation, telerobotics, virtual reality},
+} 
+@misc{WhatVR, 
+    title={What is Virtual Reality?}, 
+    author = {{Virtual Reality Society}},
+    year = {2017},
+    note = {Available: \url{https://www.vrs.org.uk/virtual-reality/what-is-virtual-reality.html}. [Accessed: \today]}
+}
+@misc{Oculus, 
+    title={Oculus Rift Homepage}, 
+    author = {{Oculus}},
+    year = {2017},
+    note = {Available: \url{https://www.oculus.com/rift/}. [Accessed: \today]}
+}
+@misc{Vive, 
+    title={HTC Vive Homepage}, 
+    author = {{HTC}},
+    year = {2017},
+    note = {Available: \url{https://www.vive.com/uk/}. [Accessed: \today]}
+}
+@BOOK{NAP4761,
+  author    = "National Research Council",
+  editor    = "Nathaniel I. Durlach and Anne S. Mavor",
+  title     = "Virtual Reality: Scientific and Technological Challenges",
+  isbn      = "978-0-309-05135-4",
+  doi       = "10.17226/4761",
+  url       = "https://www.nap.edu/catalog/4761/virtual-reality-scientific-and-technological-challenges",
+  year      = 1995,
+  publisher = "The National Academies Press",
+  address   = "Washington, DC"
+}
+@article{fong2017interactive,
+  title={Interactive Exploration Robots: Human-Robotic Collaboration and Interactions},
+  author={Fong, Terry},
+  year={2017}
+}
+@misc{Robonaut, 
+    title={Robonaut 2 Homepage}, 
+    author = {{NASA}},
+    year = {2016},
+    note = {Available: \url{https://robonaut.jsc.nasa.gov/R2/}. [Accessed: \today]}
+}
+@misc{FPV, 
+    title={FPV Starting Guide}, 
+    author = {{RCExplorer}},
+    year = {2009},
+    note = {Available: \url{https://rcexplorer.se/educational/2009/09/fpv-starting-guide/}. [Accessed: \today]}
+}
+@ARTICLE{2FPV,
+  AUTHOR={Smolyanskiy, Nikolai and Gonzalez-Franco, Mar},    
+  TITLE={Stereoscopic First Person View System for Drone Navigation},      
+  JOURNAL={Frontiers in Robotics and AI},       
+  VOLUME={4},     
+  PAGES={11},     
+  YEAR={2017},       
+  URL={https://www.frontiersin.org/article/10.3389/frobt.2017.00011},       
+  DOI={10.3389/frobt.2017.00011},      
+  ISSN={2296-9144}
+}
+@article{lipton2018baxter,
+  title={Baxter's Homunculus: Virtual Reality Spaces for Teleoperation in Manufacturing},
+  author={Lipton, Jeffrey I and Fay, Aidan J and Rus, Daniela},
+  journal={IEEE Robotics and Automation Letters},
+  volume={3},
+  number={1},
+  pages={179--186},
+  year={2018},
+  publisher={IEEE}
+}
+@inproceedings{wang2017novel,
+  title={A novel human-robot interaction system based on 3D mapping and virtual reality},
+  author={Wang, Pan and Xiao, Junhao and Lu, Huimin and Zhang, Hui and Yan, Ruoyi and Hong, Shaozun},
+  booktitle={Chinese Automation Congress (CAC), 2017},
+  pages={5888--5894},
+  year={2017},
+  organization={IEEE}
+}
+@article{ribas1993interframe,
+  title={Interframe interpolation of cinematic sequences},
+  author={Ribas-Corbera, Jordi and Sklansky, Jack},
+  journal={Journal of Visual Communication and image representation},
+  volume={4},
+  number={4},
+  pages={392--406},
+  year={1993},
+  publisher={Elsevier}
+}
+@inproceedings{shi2016real,
+  title={Real-time single image and video super-resolution using an efficient sub-pixel convolutional neural network},
+  author={Shi, Wenzhe and Caballero, Jose and Husz{\'a}r, Ferenc and Totz, Johannes and Aitken, Andrew P and Bishop, Rob and Rueckert, Daniel and Wang, Zehan},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={1874--1883},
+  year={2016}
+}
