--- a/Report/Bibliography.bib
+++ b/Report/Bibliography.bib
@@ -278,3 +278,47 @@ title = {Implementing a Novel Approach an Convert Audio Compression to Text Codi
   pages={1874--1883},
   year={2016}
 }
+@article{qian1997binocular,
+  title={Binocular disparity and the perception of depth},
+  author={Qian, Ning},
+  journal={Neuron},
+  volume={18},
+  number={3},
+  pages={359--368},
+  year={1997},
+  publisher={Elsevier}
+}
+@misc{deptheg, 
+    title={Dense Disparity Map Estimation Respecting 
+Image Discontinuities}, 
+    author = {L.Alvarez, R.Deriche, J.Sánchez, J.Weickert},
+    year = {2000},
+    note = {Available: \url{http://serdis.dis.ulpgc.es/~lalvarez/research/demos/StereoFlow/index.html}. [Accessed: \today]}
+}
+@book{linda2001stockman,
+  title={Stockman, Computer vision},
+  author={Linda, G and Shapiro, C George},
+  year={2001},
+  publisher={Prentice Hall, Upper Saddle River, NJ}
+}
+@misc{distort, 
+    title={Camera Calibration}, 
+    author = {{opencv dev team}},
+    year = {2014},
+    note = {Available: \url{https://docs.opencv.org/3.0-beta/doc/py_tutorials/py_calib3d/py_calibration/py_calibration.html#calibration}. [Accessed: \today]}
+}
+@misc{stereocal, 
+    title={Stereo calibration using C++ and OpenCV}, 
+    author = {S Ghost},
+    year = {2016},
+    note = {Available: \url{http://sourishghosh.com/2016/stereo-calibration-cpp-opencv/}. [Accessed: \today]}
+}
+@inproceedings{dodgson2004variation,
+  title={Variation and extrema of human interpupillary distance},
+  author={Dodgson, Neil A},
+  booktitle={Stereoscopic Displays and Virtual Reality Systems XI},
+  volume={5291},
+  pages={36--47},
+  year={2004},
+  organization={International Society for Optics and Photonics}
+}
