--- a/Report/Thesis.tex
+++ b/Report/Thesis.tex
@@ -93,13 +93,13 @@ I would like to thank Klaus-Peter Zauner and all the people who have had to put 
 
 \input{Chapters/Background} % Background 
 
+\input{Chapters/Overview} % System Overview
+
 \input{Chapters/Abstraction} % Abstraction Algorithm Development
 
 \input{Chapters/Rover} % Rover Implementation
 
 \input{Chapters/Server} % Server-Side Implementation
-
-\input{Chapters/Testing} % System Evaluation
 
 \input{Chapters/Evaluation} % Project Evaluation and Conclusion
 
@@ -115,6 +115,8 @@ I would like to thank Klaus-Peter Zauner and all the people who have had to put 
 \input{Appendices/Contours} % Appendix Title
 
 \input{Appendices/AbstractionDemos} % Appendix Title
+
+\input{Appendices/Hardware}
 
 \input{Appendices/GanttChart} % Appendix Title
 
