--- a/Report/Appendices/AbstractionDemos.tex
+++ b/Report/Appendices/AbstractionDemos.tex
@@ -1,5 +1,6 @@
 \chapter{Demonstrations of Full Data Abstraction}
 \lhead{\emph{Demonstrations of Full Data Abstraction}}
+\label{Appendix:demo}
 
 \begin{figure}[h]
     \begin{center}
