--- a/Report/Bibliography.bib
+++ b/Report/Bibliography.bib
@@ -322,3 +322,11 @@ Image Discontinuities},
   year={2004},
   organization={International Society for Optics and Photonics}
 }
+@article{aguilera2006comparison,
+  title={Comparison of different image compression formats},
+  author={Aguilera, Paula},
+  journal={ECE},
+  volume={533},
+  year={2006},
+  publisher={Wisconsin College of Engineering}
+}
