--- a/Report/Bibliography.bib
+++ b/Report/Bibliography.bib
@@ -330,3 +330,20 @@ Image Discontinuities},
   year={2006},
   publisher={Wisconsin College of Engineering}
 }
+@misc{libimagequant, 
+    title={{libimagequant-Image Quantization Library}}, 
+    author = {Kornel Lesiński},
+    year = {2017},
+    note = {Available: \url{https://pngquant.org/lib/}. [Accessed: \today]}
+}
+@book{fall2011tcp,
+  title={TCP/IP illustrated, volume 1: The protocols},
+  author={Fall, Kevin R and Stevens, W Richard},
+  year={2011},
+  publisher={addison-Wesley}
+}
+@techreport{postel1980user,
+  title={User datagram protocol},
+  author={Postel, Jon},
+  year={1980}
+}
