--- a/Report/Appendices/GanttChart.tex
+++ b/Report/Appendices/GanttChart.tex
@@ -1,5 +1,5 @@
-\chapter{Gantt Chart}
-\lhead{\emph{Gantt Chart}}
+\chapter{Gantt Charts}
+\lhead{\emph{Gantt Charts}}
 \begin{landscape}
 \begin{figure}[ht]
     \begin{center}
