--- a/Report/Bibliography.bib
+++ b/Report/Bibliography.bib
@@ -347,3 +347,9 @@ Image Discontinuities},
   author={Postel, Jon},
   year={1980}
 }
+@misc{unreal, 
+    title={What is unreal engine 4?}, 
+    author = {{Epic Games}},
+    year = {2018},
+    note = {Available: \url{https://www.unrealengine.com/en-US/what-is-unreal-engine-4}. [Accessed: \today]}
+}
