--- a/Report/Thesis.tex
+++ b/Report/Thesis.tex
@@ -103,6 +103,14 @@ I would like to thank Klaus-Peter Zauner and all the people who have had to put 
 
 \input{Chapters/Evaluation} % Project Evaluation and Conclusion
 
+\addtocontents{toc}{\vspace{2em}}  % Add a gap in the Contents, for aesthetics
+%\backmatter
+%% ----------------------------------------------------------------
+\label{Bibliography}
+\lhead{\emph{Bibliography}}  % Change the left side page header to "Bibliography"
+\bibliographystyle{ieeetr}  % Use the "unsrtnat" BibTeX style for formatting the Bibliography
+\bibliography{Bibliography}  % The references (bibliography) information are stored in the file named "Bibliography.bib"
+
 %% ----------------------------------------------------------------
 % Now begin the Appendices, including them as separate files
 
@@ -116,21 +124,17 @@ I would like to thank Klaus-Peter Zauner and all the people who have had to put 
 
 \input{Appendices/Hardware}
 
+\input{Appendices/vector}
+
+\input{Appendices/brief}
+
 \input{Appendices/GanttChart} % Appendix Title
 
 \input{Appendices/Costs} % Appendix Title
 
 %\input{Appendices/AppendixF} % Appendix Title
 
-\addtocontents{toc}{\vspace{2em}}  % Add a gap in the Contents, for aesthetics
-\backmatter
 
-%% ----------------------------------------------------------------
-\label{Bibliography}
-\lhead{\emph{Bibliography}}  % Change the left side page header to "Bibliography"
-\bibliographystyle{ieeetr}  % Use the "unsrtnat" BibTeX style for formatting the Bibliography
-\bibliography{Bibliography}  % The references (bibliography) information are stored in the file named "Bibliography.bib"
+
 \end{document}  % The End
 %% ----------------------------------------------------------------
-
-%https://dl.acm.org/citation.cfm?id=3038369
