--- a/Report/Bibliography.bib
+++ b/Report/Bibliography.bib
@@ -353,3 +353,9 @@ Image Discontinuities},
     year = {2018},
     note = {Available: \url{https://www.unrealengine.com/en-US/what-is-unreal-engine-4}. [Accessed: \today]}
 }
+@misc{calibgit, 
+    title={Stereo camera calibration using OpenCV and C++}, 
+    author = {{Sourish Ghost}},
+    year = {2016},
+    note = {Available: \url{https://github.com/sourishg/stereo-calibration}. [Accessed: \today]}
+}
