--- a/Report/Appendices/Costs.tex
+++ b/Report/Appendices/Costs.tex
@@ -1,13 +1,5 @@
-\chapter{Costing and Risk Assessment}
-\lhead{\emph{Costing and Risk Assessment}}
-
-\begin{figure}[H]
-    \begin{center}
-      \includegraphics[width=\textwidth]{Figures/Requisitions.png}
-      \caption[Hardware Costs List]{Hardware Costs List. This shows the use of budget for this project thus far. Total budget spent = \pounds124.97}
-      \label{fig:Costs}
-    \end{center}
-\end{figure}
+\chapter{Risk Assessment}
+\lhead{\emph{Risk Assessment}}
 
 \begin{figure}[H]
     \begin{center}
