--- a/Report/Bibliography.bib
+++ b/Report/Bibliography.bib
@@ -359,3 +359,45 @@ Image Discontinuities},
     year = {2016},
     note = {Available: \url{https://github.com/sourishg/stereo-calibration}. [Accessed: \today]}
 }
+@inproceedings{han2017design,
+  title={The design of video see-through window for manipulating physical object with head-mounted display},
+  author={Han, Ping-Hsuan and Chen, Yang-Sheng and Wang, Han-Lei and Huang, Yu-Jie and Hsiao, Jus-Chun and Chen, Kuan-Wen and Hung, Yi-Ping},
+  booktitle={ACM SIGGRAPH 2017 Posters},
+  pages={31},
+  year={2017},
+  organization={ACM}
+}
+@incollection{huvenne2018rovs,
+  title={ROVs and AUVs},
+  author={Huvenne, Veerle AI and Robert, Katleen and Marsh, Leigh and Iacono, Claudio Lo and Le Bas, Tim and Wynn, Russell B},
+  booktitle={Submarine Geomorphology},
+  pages={93--108},
+  year={2018},
+  publisher={Springer}
+}
+@techreport{smith2017radiation,
+  title={Radiation Hardened Telerobotic Dismantling System Development Final Report CRADA No. TC-1340-96},
+  author={Smith, C and Lightman, A},
+  year={2017},
+  institution={Lawrence Livermore National Lab.(LLNL), Livermore, CA (United States)}
+}
+@misc{pi, 
+    title={{Raspberry Pi Homepage}}, 
+    author = {{Raspberry Pi Foundation}},
+    year = {2018},
+    note = {Available: \url{https://www.raspberrypi.org/}. [Accessed: \today]}
+}
+@misc{windows, 
+    title={{Windows Official Site}}, 
+    author = {{Microsoft}},
+    year = {2018},
+    note = {Available: \url{https://www.microsoft.com/en-gb/windows/}. [Accessed: \today]}
+}
+@inproceedings{geiger2010efficient,
+  title={Efficient large-scale stereo matching},
+  author={Geiger, Andreas and Roser, Martin and Urtasun, Raquel},
+  booktitle={Asian conference on computer vision},
+  pages={25--38},
+  year={2010},
+  organization={Springer}
+}
