--- a/Report/Thesis.tex
+++ b/Report/Thesis.tex
@@ -125,10 +125,12 @@ I would like to thank Klaus-Peter Zauner for his incredible help and support. I 
 \addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
 
 \appendix % Cue to tell LaTeX that the following 'chapters' are Appendices
+
+\input{Appendices/AbstractionDemos} % Appendix Title
 	
 \input{Appendices/Contours} % Appendix Title
 
-\input{Appendices/AbstractionDemos} % Appendix Title
+\input{Appendices/Scenes} % Appendix Title
 
 \input{Appendices/Hardware}
 
