--- a/Report/Appendices/Scenes.tex
+++ b/Report/Appendices/Scenes.tex
@@ -1,5 +1,5 @@
-\chapter{Algorithm Performance Test Images}
-\lhead{\emph{Algorithm Performance Test Images}}
+\chapter{Images of Algorithm Performance Test Scenes}
+\lhead{\emph{Images of Algorithm Performance Test Scenes}}
 \label{Appendix:scenes}
         
 \begin{figure}[ht]
