--- a/Report/Bibliography.bib
+++ b/Report/Bibliography.bib
@@ -401,3 +401,11 @@ Image Discontinuities},
   year={2010},
   organization={Springer}
 }
+@article{alexander2005gaming,
+  title={From gaming to training: A review of studies on fidelity, immersion, presence, and buy-in and their effects on transfer in pc-based simulations and games},
+  author={Alexander, Amy L and Bruny{\'e}, Tad and Sidman, Jason and Weil, Shawn A},
+  journal={DARWARS Training Impact Group},
+  volume={5},
+  pages={1--14},
+  year={2005}
+}
