--- a/Report/Thesis.tex
+++ b/Report/Thesis.tex
@@ -19,6 +19,8 @@
 \usepackage{listings}
 \usepackage{lscape}
 \usepackage{multirow}
+\usepackage[justification=justified,singlelinecheck=false]{caption}
+\usepackage{tikz}
 %\usepackage{lineno}
 %\linenumbers
 %% ----------------------------------------------------------------
@@ -143,7 +145,6 @@ I would like to thank Klaus-Peter Zauner for his incredible help and support. I 
 \input{Appendices/Costs} % Appendix Title
 
 \input{Appendices/Archive} % Appendix Title
-
 
 
 \end{document}  % The End
