--- a/Report/Appendices/Costs.tex
+++ b/Report/Appendices/Costs.tex
@@ -1,10 +1,13 @@
 \chapter{Risk Assessment}
 \lhead{\emph{Risk Assessment}}
+\label{appendix:risk}
 
-\begin{figure}[H]
+\begin{landscape}
+\begin{figure}[ht]
     \begin{center}
-      \includegraphics[width=\textwidth]{Figures/RiskAssessment.png}
-      \caption[Risk Assessment]{Risk Assessment for the project going forward.}
+      \includegraphics[width=1.5\textwidth]{Figures/risk.png}
+      \caption[Risk Assessment]{Risk Assessment. Left of the thicker line is the original risk assessment from the interim report, and right of the thicker line is the end of project evaluation of the risk assessment.}
       \label{fig:Risk}
     \end{center}
 \end{figure}
+\end{landscape}
