--- a/Report/Appendices/GanttChart.tex
+++ b/Report/Appendices/GanttChart.tex
@@ -1,10 +1,13 @@
-\chapter{Gantt Charts}
-\lhead{\emph{Gantt Charts}}
+\chapter{Gantt Chart}
+\lhead{\emph{Gantt Chart}}
+\label{appendix:gantt}
+
 \begin{landscape}
 \begin{figure}[ht]
     \begin{center}
-    \includegraphics[width=1.5\textwidth]{Figures/ganttfinal.png}
+    \includegraphics[width=1.5\textwidth]{Figures/ganttfull.png}
     \label{fig:GanttChart}
+    \caption[Gantt Chart]{Gantt Chart. Red segments are report writing, green are hardware construction, blue are software development, and purple are testing.}
     \end{center}
 \end{figure}
 \end{landscape}
