--- a/Report/Thesis.tex
+++ b/Report/Thesis.tex
@@ -20,7 +20,7 @@
 \usepackage{lscape}
 \usepackage{multirow}
 \usepackage[justification=justified,singlelinecheck=false]{caption}
-\usepackage{tikz}
+\usepackage{graphicx}
 %\usepackage{lineno}
 %\linenumbers
 %% ----------------------------------------------------------------
@@ -59,7 +59,7 @@
 \abstract{
 %\addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
 
-The application of Virtual Reality (VR) to telerobotics is a current area of study due to a desire for the increased spacial awareness VR provides. However, attempts to implement such a system using standard teleoperation techniques result in sub-par performance and an uncomfortable experience for the user; the benefits of a VR based system are entirely eliminated. The system proposed by this project incorporates elements of data abstraction to produce abstractions of the environment. This process reduces the performance requirements of providing the user presence within the telerobot's space such that reasonable spacial awareness can be achieved.
+The application of Virtual Reality (VR) to telerobotics is a current area of study due to a desire for the increased spacial awareness VR provides. However, attempts to implement such a system using standard teleoperation techniques result in sub-par performance and an uncomfortable experience for the user; the benefits of a VR based system are entirely eliminated. The system proposed by this project incorporates elements of data abstraction to produce abstractions of the environment. This process reduces the performance requirements of providing the user presence within the telerobot's space such that it can be achieved under reasonable budgetary constraints.
 
 \clearpage  % Abstract ended, start a new page
 %% ----------------------------------------------------------------
